# BLE-with-AS6221

./: README.rst  platformio.ini
src/: main.c
zephyr/: CMakeLists.txt  prj.conf
zephyr/boards/: nrf52840_i2c.overlay
